Fixes #3682 scrollbar thumb size is innacurate in hc-dark theme

--- a/src/vs/base/browser/ui/scrollbar/media/scrollbars.css
+++ b/src/vs/base/browser/ui/scrollbar/media/scrollbars.css
@@ -89,7 +89,8 @@
 
 .hc-black .monaco-scrollable-element > .scrollbar > .slider {
 	background: none;
-	border: 20px solid #6FC3DF;
+	outline: 20px solid #6FC3DF; /* IE and Edge render no backgrounds, so we must use borders/outlines */
+	outline-offset: -20px;
 	opacity: .4;
 }
 
